# PyMC

./: .gitignore  agent_plugin.py  block_type.py  camera.py  chunk.py  cmd_builder.py  config.py  controller.py  hit.py  imgui.ini  main.py  map_data.py  plugin.py  pyproject.toml  shader.py  subchunk.py  tcp_agent_plugin.py  texture_mgr.py  websocket_agent_plugin.py  world.py
gui_mgr/: __init__.py  chat_box.py  hud.py  imgui_pygame_renderer.py  opencode_agent_plugin.py
models/: cactus.py  crop.py  door.py  glass.py  leaves.py  lever.py  liquid.py  sign.py  snow.py  soil.py  torch.py
shaders/: fragment_shader.fs  vertex_shader.vs
